# HPE-grpc

./: .gitignore  Dockerfile  Dockerfile.client  Dockerfile.server  Makefile  README.md  ca.crt  ca.key  ca.srl  client.crt  client.key  server.crt  server.key  ssl.conf
grpc/: CMakeLists.txt  client.cpp  server.cpp  service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h  service.proto
